# ai-mbti

./: README.md
client/: package-lock.json  package.json
client/src/components/: LoginModal.svelte  RegisterModal.svelte  SnsAuth.svelte
client/src/routes/: +page.svelte
client/src/routes/about/: +page.svelte
client/src/routes/api/estimate-mbti/: +server.ts
client/src/routes/contact/: +page.svelte
client/src/routes/mbti/: +page.svelte
client/src/routes/privacy/: +page.svelte
server/: Cargo.toml  Dockerfile  Dockerfile_ToBe
