[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0"
actix-rt = "2.5"
serde = { version = "1.0", features = ["derive"] }
diesel = { version = "1.4.4", features = ["postgres", "chrono", "serde_json"] }
dotenv = "0.15.0"
jsonwebtoken = "7.2"
bcrypt = "0.10.1"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }